compiler/testData/diagnostics/tests/overload/ConflictingOverloadsValsDifferentTypeInClass.kt
class Aaa() {
    val <!REDECLARATION!>a<!> = 1
    val <!REDECLARATION!>a<!> = ""
}